--- a/dashboard.css
+++ b/dashboard.css
@@ -9,13 +9,14 @@
 }
 
 body {
-  background: rgb(15, 15, 15);
-  /* background: linear-gradient(0deg, rgba(15,15,15,1) 0%, rgba(24,24,24,1) 100%); */
+  height: 100%;
+  background: rgb(20, 20, 20);
+  /* background: linear25-gradient(0deg, rgba(15,15,15,1) 0%, rgba(24,24,24,1) 100%); */
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url("gradient.svg");
+  /* background-image: url("gradient.svg"); */
   transition: filter 0.4s ease;
-  overflow: hidden;
+  /* overflow: hidden; */
   animation: fade 1s forwards;
 }
 
@@ -147,21 +148,24 @@ header a span:last-child {
   color: #ff5f45;
 }
 
-
-
-.profile {
-  width: 40px;
-  height: 40px;
+#profil {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border: 2px solid #ff5f45;
   border-radius: 100%;
 }
 
-.profile img {
-  width: 100%;
-  height: 100%;
+#profil img {
+  width: 85%;
+  height: 85%;
   object-fit: cover;
 }
 
 #deconnexion {
+  display: flex;
   height: 30px;
   width: 30px;
   filter: invert(100%) brightness(200%);
@@ -169,9 +173,101 @@ header a span:last-child {
 
 .container {
   display: flex;
-  height: 829px;
+  height: 100%;
   width: 100%;
   padding: 25px;
+  /* overflow: hidden; */
+}
+
+.categories {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-auto-rows: 220px;
+  /* grid-template-rows: repeat(4, 220px); */
+  grid-gap: 20px;
+  height: 600px;
+  width: 100%;
+  padding-right: 15px;
+  overflow-y: scroll;
+  /* transform: translateX(-20px); */
+  color: white;
+}
+
+.quiz2 {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1f1f1fbe;
+  border-radius: 15px;
+  cursor: pointer;
+  user-select: none;
+  padding: 40px 40px 60px 40px;
+}
+
+.quiz2 img {
+  height: 100%;
+  width: auto;
+  object-fit: cover;
+  transition: all 0.5s ease;
+}
+
+.quiz2:hover img:not(.trash2, .edit2) {
+  transform: scale(0.9);
+  rotate: 10deg;
+}
+
+.quiz2:last-child {
+  padding: 70px;
+  border: 2px dashed #ffffff;
+}
+
+.quiz2:last-child a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.quiz2:last-child img:last-child {
+  rotate: 0deg;
+  filter: invert(100%) brightness(200%);
+}
+
+.quiz2 a {
+  color: white;
+  font-size: 90px;
+  font-weight: 300;
+}
+
+.quiz2 .trash2 {
+  display: none;
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
+  position: absolute;
+  margin: 10px;
+  transition: all 0.5s ease;
+  /* border: 10px solid #333333; */
+}
+
+.quiz2:hover .trash2 {
+  display: block;
+}
+
+.trash2 {
+  top: 0;
+  right: 0;
+}
+
+.Name {
+  position: absolute;
+  bottom: 10px;
+  left: 20px;
+  font-size: 25px;
+  font-weight: 500;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 form {
@@ -194,18 +290,6 @@ form input:not([type="submit"]) {
 
 form input:invalid:not([type="submit"]) {
   border: 2px dashed rgba(255, 255, 255, 0.473);
-}
-
-input[type="submit"] {
-  height: 55px;
-  width: 175px;
-  font-size: 18px;
-  color: white;
-  background-color: #ff5f45;
-  border: none;
-  border-radius: 35px;
-  margin: 15px 0 5px 0;
-  cursor: pointer;
 }
 
 .other {
@@ -308,24 +392,6 @@ input[type="submit"] {
   z-index: -1;
 }
 
-.profile {
-  width: 40px;
-  height: 40px;
-  border-radius: 100%;
-}
-
-.profile img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-#deconnexion {
-  height: 30px;
-  width: 30px;
-  filter: invert(100%) brightness(200%);
-}
-
 .info {
   display: flex;
   flex-direction: column;
@@ -333,6 +399,7 @@ input[type="submit"] {
   width: 100%;
   color: white;
   padding: 0 0 20px 0;
+  user-select: none;
 }
 
 .info h2 {
@@ -356,49 +423,9 @@ input[type="submit"] {
   width: 100%;
 }
 
-.categories {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(4, 220px);
-  grid-gap: 20px;
-  height: 700px;
-  width: 100%;
-  /* transform: translateX(-20px); */
-  color: white;
-  padding: 25px;
-  overflow-y: scroll;
-}
-
-.imgCategorie {
-  position: relative;
+.test {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #1f1f1fbe;
-  border-radius: 15px;
-  cursor: pointer;
-  user-select: none;
-  padding: 40px 40px 60px 40px;
-}
-
-.imgCategorie img {
-  object-fit: cover;
-  height: 100%;
-  width: auto;
-  transition: all 0.5s ease;
-}
-
-.imgCategorie:hover img {
-  transform: scale(0.9);
-}
-
-.Name {
-  position: absolute;
-  bottom: 10px;
-  left: 20px;
-  font-size: 25px;
-  font-weight: 500;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  flex-direction: column;
 }
 
 .passwd div {
@@ -410,40 +437,24 @@ label {
   color: white;
 }
 
-.passwd input {
+.passwd input:not([type="submit"]) {
   margin-bottom: 20px;
+  height: 35px;
+  width: 400px;
+  color: white;
+  background-color: #333333;
+  border: none;
+  border-radius: 8px;
+  padding-left: 12px;
+  box-shadow: 0 20px 20px 5px rgba(0, 0, 0, 0.1);
+  outline: none;
 }
 
 .container-onglet h3 {
+  width: 150px;
   color: white;
   font-size: 20px;
   font-weight: 400;
-  margin-right: 20px;
-}
-
-.profil {
-  position: relative;
-  height: 250px;
-  width: 100%;
-  color: transparent;
-  background: rgb(36, 36, 36);
-  background: linear-gradient(
-    0deg,
-    rgba(36, 36, 36, 1) 10%,
-    rgba(250, 96, 49, 1) 100%
-  );
-  border-radius: 15px;
-}
-
-.profil img {
-  position: absolute;
-  bottom: -50px;
-  left: 100px;
-  height: 200px;
-  width: 200px;
-  border-radius: 100%;
-  border: 12px solid #242424;
-  overflow: hidden;
 }
 
 .personal-info {
@@ -460,17 +471,27 @@ label {
   margin-bottom: 20px;
 }
 
-.button-save {
-  height: 45px;
-  width: 150px;
+.button-save,
+.button-cancel {
+  height: 40px;
+  width: 175px;
   font-size: 18px;
   color: white;
-  background-color: #fa6031;
+  background-color: #ff5f45;
+  border-radius: 10px;
+  margin-right: 15px;
   border: none;
-  border-radius: 35px;
-  float: right;
-  margin-top: 25px;
   cursor: pointer;
+}
+
+.buttons {
+  display: flex;
+  align-items: center;
+}
+
+.button-cancel {
+  color: white;
+  background-color: #1f1f1f;
 }
 
 .button-save:active {
@@ -479,10 +500,13 @@ label {
 
 #status {
   display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
   align-items: center;
-  width: 125px;
+  margin-bottom: 20px;
+  width: auto;
+}
+
+#status p {
+  margin-right: 15px;
 }
 
 #online {
@@ -498,13 +522,16 @@ label {
   display: flex;
   align-items: center;
   height: 40px;
+  width: 220px;
   border-radius: 10px;
   background-color: #f1f1f1;
+  margin-right: 15px;
+  transition: all 0.5s ease;
 }
 
 .search-container input[type="search"] {
   flex: 1;
-  padding: 0 20px;
+  padding: 10px;
   border: none;
   font-size: 16px;
 }
@@ -529,7 +556,7 @@ label {
 }
 
 .searchBar {
-  width: 300px;
+  width: 100%;
   height: 100%;
   font-size: 28px;
   color: #333333;
@@ -559,10 +586,14 @@ label {
   animation: fade 0.5s ease;
 }
 
+.button.active {
+  background-color: #ff5f45;
+}
+
 .button {
   height: 60px;
   width: 60px;
-  background-color: #161616;
+  /* background-color: #161616; */
   border-radius: 15px;
   margin-bottom: 15px;
   padding: 12px;
@@ -571,7 +602,11 @@ label {
   transition: all 0.5s ease;
 }
 
-.button:nth-child(1) {
+.button:hover {
+  background-color: #ff5f45;
+}
+
+/* .button:nth-child(1) {
   background-color: #ff5f45;
 }
 
@@ -589,11 +624,7 @@ label {
 
 .button:nth-child(5) {
   background-color: #ffba94;
-}
-
-.button:hover {
-  opacity: 0.7;
-}
+} */
 
 .button img:active {
   transform: scale(0.8);
@@ -607,65 +638,104 @@ label {
   object-fit: cover;
 }
 
-#categories {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: repeat(10, 70px);
-  grid-gap: 20px;
-  height: 620px;
+.container-list {
+  height: 100%;
   width: 100%;
-  overflow-y: scroll;
-  /* transform: translateX(-20px); */
-  color: white;
 }
 
-.imgCategorie {
+#list-user {
+  /* display: grid;  
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(10, 70px);
+  grid-gap: 18px; */
+  color: white;
+  height: 65vh;
+  width: 100%;
+  overflow-y: scroll;
+  padding-right: 15px;
+  border-radius: 8px;
+}
+
+table {
+  width: 100%;
+  background-color: rgb(27, 27, 27);
+  border-radius: 8px;
+  border-spacing: 0;
+}
+
+td {
+  font-weight: 300;
+  font-size: 16px;
+}
+
+th {
+  font-size: 18px;
+}
+
+td, th {
+  border-bottom: 1px solid black;
+  text-align: center;
+  padding: 10px;
+}
+
+#star {
+  color: rgb(255, 174, 0);
+}
+
+.user {
   display: flex;
   align-items: center;
-  background-image: linear-gradient(to left, rgb(15, 15, 15), rgb(24, 24, 24));
+  height: 70px;
+  width: 100%;
+  border: 3px solid #1f1f1fbe;
   border-radius: 100px;
-  margin-right: 20px;
+  margin-bottom: 18px;
   cursor: pointer;
   user-select: none;
 }
 
-.imgCategorie .trash,
-.imgCategorie .edit {
+.user h4 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  color: #d4d4d4;
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.trash,
+.edit {
   display: none;
   width: 30px;
   height: 30px;
   object-fit: cover;
   transition: all 0.5s ease;
-  /* border: 10px solid #333333; */
+  cursor: pointer;
 }
 
 .trash {
+  margin: 0 20px 0 0;
+}
+
+.edit {
   margin: 0 20px 0 auto;
 }
 
-.imgCategorie .edit {
-  margin: 10px 10px 15px 10px;
+.user:hover .trash,
+.user:hover .edit {
+  display: block;
 }
 
-.imgCategorie .Illustration {
+.user .Illustration {
   height: 100%;
   width: auto;
   object-fit: cover;
   transition: all 0.5s ease;
 }
 
-.imgCategorie:hover .Illustration {
+.user:hover .Illustration {
   transform: scale(0.85);
-}
-
-.imgCategorie:hover .trash,
-.imgCategorie:hover .edit {
-  display: block;
-}
-
-.imgCategorie .trash,
-.imgCategorie .edit {
-  cursor: pointer;
 }
 
 .image {
@@ -701,20 +771,21 @@ footer ul a {
 }
 
 ::-webkit-scrollbar {
-    width: 8px;
+  width: 8px;
+  /* display: none; */
 }
 
 ::-webkit-scrollbar-track {
-    margin: 0 0 10px 0;
-    background-color: #f1f1f1;
-    border-radius: 10px;
+  /* padding: 0 0 10px 0; */
+  background-color: #1f1f1fbe;
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background-color: #ff5f45;
-    border-radius: 10px;
-    background-clip: content-box;
+  border-radius: 10px;
+  background-color: #444444;
+  border-radius: 10px;
+  background-clip: content-box;
 }
 
 @keyframes move-icon {
