--- a/home.css
+++ b/home.css
@@ -9,9 +9,14 @@
 }
 
 body {
-  background-color: #242424;
-  
-  overflow-x: hidden;
+  background: rgb(20, 20, 20);
+  /* background: linear-gradient(0deg, rgba(15,15,15,1) 0%, rgba(24,24,24,1) 100%); */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("gradient.svg");
+  overflow-y: hidden;
+  transition: filter 0.4s ease;
+  animation: fade 1s forwards;
 }
 
 header {
@@ -19,21 +24,159 @@ header {
   align-items: center;
   justify-content: space-between;
   color: white;
-  height: 80px;
-  background: #FA6031;
-  box-shadow: 0 0 40px 40px rgba(0, 0, 0, 0.2);
+  height: 100px;
+  /* box-shadow: 0 0 40px 40px rgba(0, 0, 0, 0.2); */
 }
 
-header h1 a {
-  color: white;
+.home {
+  margin-left: 35px;
   user-select: none;
-  margin-left: 20px;
   cursor: pointer;
 }
 
-header a span {
-  color: #333333;
+header a span:nth-child(1) {
+  font-size: 35px;
+  font-weight: 900;
+  color: #ff5f45;
+}
+
+header a span:last-child {
   font-size: 25px;
+  font-weight: 900;
+  color: white;
+}
+
+.options {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  width: auto;
+  color: white;
+  user-select: none;
+}
+
+.options h2,
+#profil,
+#deconnexion {
+  margin-right: 30px;
+}
+
+.options h2 {
+  font-size: 18px;
+  font-weight: 500;
+}
+
+#profil {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  border: #ff5f45 2px solid;
+}
+
+#profil img {
+  width: 85%;
+  height: 85%;
+  object-fit: cover;
+}
+
+#deconnexion {
+  height: 100%;
+  width: auto;
+}
+
+#deconnexion img {
+  height: 100%;
+  width: 100%;
+  filter: invert(100%) brightness(200%);
+}
+
+.container {
+  height: 829px;
+  width: 100%;
+}
+
+.icons {
+  position: absolute;
+}
+
+.icons img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform-origin: center;
+  animation: move-icon 10s ease-in-out infinite alternate;
+}
+
+.icons img:nth-child(1) {
+  height: 140px;
+  width: 140px;
+  top: 0;
+  left: 90px;
+  rotate: 137deg;
+  /* filter: blur(3px); */
+}
+
+.icons img:nth-child(2) {
+  height: 110px;
+  width: 110px;
+  top: -135px;
+  left: 260px;
+  rotate: -171deg;
+  /* filter: blur(3px); */
+  z-index: -1;
+}
+
+.icons img:nth-child(3) {
+  height: 150px;
+  width: 150px;
+  top: 90px;
+  left: 470px;
+  rotate: -42deg;
+  z-index: -1;
+}
+
+.icons img:nth-child(4) {
+  height: 180px;
+  width: 180px;
+  top: 500px;
+  left: 460px;
+  rotate: 147deg;
+  /* filter: blur(3px); */
+  z-index: -1;
+}
+
+.icons img:nth-child(5) {
+  height: 200px;
+  width: 200px;
+  top: 50px;
+  left: 440px;
+  rotate: 147deg;
+  /* filter: blur(3px); */
+  z-index: -1;
+}
+
+.icons img:nth-child(6) {
+  height: 230px;
+  width: 230px;
+  top: 260px;
+  left: 570px;
+  rotate: -70deg;
+  /* filter: blur(3px); */
+  z-index: -1;
+}
+
+.icons img:nth-child(7) {
+  height: 150px;
+  width: 150px;
+  top: -200px;
+  left: 650px;
+  rotate: -90deg;
+  /* filter: blur(3px); */
+  z-index: -1;
 }
 
 .search {
@@ -41,129 +184,72 @@ header a span {
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
-  height: 240px;
+  height: 250px;
   width: 100%;
 }
 
 .search h2 {
   color: white;
-  font-size: 28px;
+  font-size: 38px;
   font-weight: 800;
 }
 
-.searchBar {
-  width: 1000px;
+.search-container2 {
+  display: flex;
+  align-items: center;
   height: 60px;
-  font-size: 28px;
-  background-color: #f1f1f1;
-  border: none;
+  width: 1000px;
   border-radius: 10px;
-  padding-left: 20px;
+  background-color: white;
+  user-select: none;
   box-shadow: 0 20px 20px 5px rgba(0, 0, 0, 0.1);
 }
 
-input[type="search"] {
-  outline: none;
+.search-container2 input[type="search"] {
+  flex: 1;
+  border: none;
+  font-size: 20px;
+  background-color: white;
 }
 
-.options {
+#search-icon {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
-  width: 375px;
-  color: white;
-  user-select: none;
-}
-
-.options a {
-  color: white;
-  cursor: pointer;
-  transition: all 0.5s ease;
-}
-
-.options button:hover a {
-  color: #00352c;
-}
-
-.options button {
-  height: 40px;
-  width: 150px;
-  background-color: #772D17;
-  border: none;
-  border-radius: 30px;
-  color: white;
-  font-size: 16px;
-  cursor: pointer;
-  transition: all 0.4s ease;
-}
-
-.options button:hover {
-  color: #333333;
-  background-color: #f1f1f1;
-}
-
-.profile {
-  width: 40px;
-  height: 40px;
-  border-radius: 100%;
-}
-
-.profile img {
-  width: 100%;
+  justify-content: center;
   height: 100%;
-  object-fit: cover;
-}
-
-.CategorieChoice {
-  display: flex;
-  height: auto;
-  width: 100%;
+  width: auto;
+  padding: 12px 0 12px 12px;
+  cursor: pointer;
+  border-radius: 10px;
   user-select: none;
 }
 
-.CategorieChoice button {
-  height: 40px;
-  width: 150px;
-  border: none;
-  border-radius: 10px;
-  color: white;
-  font-size: 16px;
-  font-weight: 500;
-  margin-left: 25px;
-  cursor: pointer;
-  transition: all 0.5s ease;
-}
-
-.CategorieChoice button:nth-child(1) {
-  background-color: #dd2626;
-}
-
-.CategorieChoice button:nth-child(2) {
-  background-color: #eec615;
-}
-
-.CategorieChoice button:nth-child(3) {
-  background-color: #009c51;
-}
-
-.CategorieChoice button:hover {
-  color: #333333;
-  transform: scale(0.95);
-}
-
-.container {
-  height: 800px;
+#search-icon img {
+  height: 100%;
   width: 100%;
+  /* filter: invert(100%) brightness(200%); */
+}
+
+.searchBar {
+  width: 300px;
+  height: 100%;
+  font-size: 28px;
+  color: #333333;
+  padding: 30px;
+  border: none;
+  border-radius: 0 10px 10px 0;
+  outline: none;
 }
 
 .categories {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(4, 220px);
   grid-gap: 20px;
-  height: 700px;
+  height: 570px;
   width: 100%;
   /* transform: translateX(-20px); */
+  overflow: hidden;
   color: white;
   padding: 25px;
 }
@@ -173,25 +259,28 @@ input[type="search"] {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #333333;
+  background-color: #1f1f1fbe;
   border-radius: 15px;
   cursor: pointer;
+  user-select: none;
+  padding: 40px 40px 60px 40px;
 }
 
 .imgCategorie img {
-  object-fit: cover;
   height: 100%;
   width: auto;
-  padding: 25px;
+  object-fit: cover;
   transition: all 0.5s ease;
 }
 
 .imgCategorie:hover img {
   transform: scale(0.9);
+  rotate: 10deg;
 }
 
-#Name {
+.Name {
   position: absolute;
+  color: white;
   bottom: 10px;
   left: 20px;
   font-size: 25px;
@@ -220,4 +309,26 @@ footer ul {
 footer ul a {
   color: white;
   margin-right: 10px;
+}
+
+@keyframes move-icon {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(30px);
+    rotate: 1deg;
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
