--- a/login.css
+++ b/login.css
@@ -5,14 +5,18 @@
   padding: 0;
   text-decoration: none;
   box-sizing: border-box;
-  outline: none;
   font-family: "Poppins", sans-serif;
 }
 
 body {
-  background-color: #242424;
-  
+  background: rgb(15, 15, 15);
+  /* background: linear-gradient(0deg, rgba(15,15,15,1) 0%, rgba(24,24,24,1) 100%); */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("gradient.svg");
+  transition: filter 0.4s ease;
   overflow-x: hidden;
+  animation: fade 1s forwards;
 }
 
 header {
@@ -20,46 +24,109 @@ header {
   align-items: center;
   justify-content: space-between;
   color: white;
-  height: 80px;
-  background: #FA6031;
-  box-shadow: 0 0 40px 40px rgba(0, 0, 0, 0.2);
+  height: 100px;
+  /* box-shadow: 0 0 40px 40px rgba(0, 0, 0, 0.2); */
 }
 
-header a {
-  color: white;
-  margin-left: 20px;
+.home {
+  margin-left: 35px;
   user-select: none;
   cursor: pointer;
 }
 
-header a span {
-  color: #333333;
+header a span:nth-child(1) {
+  font-size: 35px;
+  font-weight: 900;
+  color: #ff5f45;
+}
+
+header a span:last-child {
   font-size: 25px;
+  font-weight: 900;
+  color: white;
 }
 
 .options {
   display: flex;
-  align-items: center;
+  height: 45px;
+  width: auto;
   color: white;
-  margin-right: 20px;
   user-select: none;
 }
 
-.options a {
-  margin-right: 25px;
-  color: white;
+#connexion,
+.inscription {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  border-radius: 30px;
+  font-size: 16px;
   cursor: pointer;
-  transition: all 0.5s ease;
+  margin-right: 20px;
+  transition: all 0.4s ease;
+}
+
+.inscription a {
+  color: white;
+}
+
+.inscription {
+  color: white;
+  background-color: #ff5f45;
+  border: none;
+}
+
+#connexion {
+  color: #ff5f45;
+  border: 2px solid #ff5f45;
+}
+
+#connexion a {
+  color: #ff5f45;
+}
+
+.inscription2,
+.connexion2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 175px;
+  border-radius: 30px;
+  font-size: 18px;
+  cursor: pointer;
+  margin-right: 20px;
+  transition: all 0.4s ease;
+}
+
+.inscription2 a {
+  color: white;
+}
+
+.inscription2 {
+  color: white;
+  background-color: #ff5f45;
+  border: none;
+}
+
+.connexion2 {
+  color: #ff5f45;
+  border: 2px solid #ff5f45;
+}
+
+.connexion2 a {
+  color: #ff5f45;
 }
 
 .options button:hover a {
-  color: #333333;
+  color: #00352c;
 }
 
 .options button {
   height: 40px;
   width: 150px;
-  background-color: #333333;
+  background-color: #ff5f45;
   border: none;
   border-radius: 30px;
   color: white;
@@ -69,125 +136,178 @@ header a span {
 }
 
 .options button:hover {
-  color: #222222;
+  color: #333333;
   background-color: #f1f1f1;
+}
+
+#profile {
+  border-radius: 100%;
+  margin-right: 30px;
+}
+
+#profile img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .container {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: column;
-  height: auto;
+  height: 829px;
   width: 100%;
 }
 
-.slogan {
-  color: white;
-  font-size: 25px;
-  font-weight: 900;
-  height: auto;
-  width: 100%;
-  /* margin-bottom: 50px; */
-}
-
-.slogan h2 {
-  display: flex;
+.container-login {
+  /* display: flex;
   justify-content: center;
-  margin: 60px 70px 60px 70px;
-}
-
-.loginPage {
-  display: flex;
-  align-items: center;
-  color: white;
-  font-size: 20px;
-  height: 600px;
-  width: 1000px;
-  border-radius: 15px;
-  background-color: #f1f1f1;
-  overflow: hidden;
-  animation: pulsante 1.5s infinite;
-}
-
-.imgLogin {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #ffffff;
+  align-items: center; */
   height: 100%;
-  width: 50%;
-  font-size: 50px;
-  background: #fa6031;
+  width: auto;
+  padding: 0 80px 80px 185px;
 }
 
-/* .imgLogin h2 {
-  text-shadow: #242424 0 0 15px;
-} */
+.imgLogin h2 {
+  font-size: 200px;
+  color: white;
+}
 
 .imgLogin span {
-  color: #333333;
-  font-size: 60px;
-}
-
-.imgLogin img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-}
-
-.login {
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-  height: 100%;
-  padding: 40px;
-}
-
-.login h2 {
-  font-weight: 800;
-  font-size: 40px;
-  margin-bottom: 20px;
-  color: #333333;
+  font-size: 150px;
+  color: white;
 }
 
 form {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-  width: 100%;
 }
 
-form input, select {
-  width: 100%;
-  height: 40px;
-  font-size: 15px;
-  background-color: #cfcfcf;
-  border: none;
-  border-radius: 7px;
-  padding-left: 10px;
-}
-
-form input:focus {
-  border: none;
-}
-
-.submit {
-  margin-top: 20px;
-  width: 100%;
-  height: 50px;
-  font-size: 18px;
-  background-color: #fa6031;
+form input:not([type="submit"]) {
   color: white;
+  background-image: linear-gradient(to left, rgb(15, 15, 15), rgb(24, 24, 24));
+  /* background-color: rgb(22, 22, 22); */
+  width: 400px;
+  padding: 15px;
+  font-size: 16px;
+  margin-bottom: 20px;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+}
+
+form input:invalid:not([type="submit"]) {
+  border: 2px dashed rgba(255, 255, 255, 0.473);
+}
+
+input[type="submit"] {
+  height: 55px;
+  width: 175px;
+  font-size: 18px;
+  color: white;
+  background-color: #ff5f45;
   border: none;
   border-radius: 35px;
+  margin: 15px 0 5px 0;
   cursor: pointer;
-  transition: all 0.5s ease;
 }
 
-.submit:hover {
-  transform: scale(0.96);
+.other {
+  padding: 15px 0 15px 0;
+}
+
+.other span {
+  color: white;
+  font-size: 15px;
+  margin-right: 5px;
+}
+
+.other a {
+  color: #ff5f45;
+  font-size: 15px;
+  text-decoration: none;
+}
+
+.other a:hover {
+  text-decoration: underline;
+}
+
+.icons {
+  position: absolute;
+}
+
+.icons img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  animation: move-icon 6s ease-in-out infinite alternate;
+}
+
+.icons img:nth-child(1) {
+  height: 140px;
+  width: 140px;
+  top: 0;
+  left: 90px;
+  rotate: 19deg;
+  /* filter: blur(3px); */
+}
+
+.icons img:nth-child(2) {
+  height: 110px;
+  width: 110px;
+  top: -135px;
+  left: 260px;
+  rotate: -46deg;
+  /* filter: blur(3px); */
+  z-index: -1;
+}
+
+.icons img:nth-child(3) {
+  height: 120px;
+  width: 120px;
+  top: 190px;
+  left: 470px;
+  rotate: -132deg;
+  z-index: -1;
+}
+
+.icons img:nth-child(4) {
+  height: 200px;
+  width: 200px;
+  top: 500px;
+  left: 460px;
+  rotate: -177deg;
+  /* filter: blur(3px); */
+  z-index: -1;
+}
+
+.icons img:nth-child(5) {
+  height: 200px;
+  width: 200px;
+  top: -200px;
+  left: 440px;
+  rotate: 147deg;
+  /* filter: blur(3px); */
+  z-index: -1;
+}
+
+.icons img:nth-child(6) {
+  height: 230px;
+  width: 230px;
+  top: 260px;
+  left: 570px;
+  rotate: -70deg;
+  /* filter: blur(3px); */
+  z-index: -1;
+}
+
+.icons img:nth-child(7) {
+  height: 150px;
+  width: 150px;
+  top: -80px;
+  left: 650px;
+  rotate: -90deg;
+  /* filter: blur(3px); */
+  z-index: -1;
 }
 
 footer {
@@ -213,13 +333,29 @@ footer ul a {
   margin-right: 10px;
 }
 
-@keyframes pulsante {
-    0% {
-        box-shadow: #FA6031 0 0 0 0;
-    }
+@keyframes move-icon {
+  0% {
+    transform: translateY(0) rotate(0) scale(1);
+  }
+  25% {
+    transform: translateY(-10px) rotate(-12deg) scale(1.05);
+  }
+  50% {
+    transform: translateY(0) rotate(0) scale(1);
+  }
+  75% {
+    transform: translateY(10px) rotate(2deg)scale(0.95);
+  }
+  100% {
+    transform: translateY(0) rotate(0) scale(1);
+  }
+}
 
-    100% {
-        box-shadow: transparent 0 0 0 30px;
-
-    }
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
