--- a/quiz.css
+++ b/quiz.css
@@ -9,11 +9,12 @@
 }
 
 body {
-  background: rgb(15, 15, 15);
+  background: rgb(20, 20, 20);
   /* background: linear-gradient(0deg, rgba(15,15,15,1) 0%, rgba(24,24,24,1) 100%); */
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("gradient.svg");
+  overflow-y: hidden;
   overflow-x: hidden;
   transition: filter 0.4s ease;
   animation: fade 1s forwards;
@@ -94,8 +95,111 @@ header a span:last-child {
 }
 
 .container {
-  height: 829px;
+  /* height: 829px; */
+  height: 100%;
   width: 100%;
+}
+
+.number-question {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  width: 100%;
+  color: white;
+  margin: 65px 0 25px 0;
+}
+
+.number-question h2:not(:last-child) {
+  font-size: 20px;
+  font-weight: 500;
+  background-color: #ff5f45;
+  padding: 15px 30px 15px 30px;
+  border-radius: 35px;
+  margin-right: 20px;
+}
+
+.container-countdown {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+  width: 60px;
+  color: #242424;
+  border: #ff5f45 5px solid;
+  background-color: #f1f1f1;
+  border-radius: 100%;
+  animation: pulse s infinite;
+}
+
+.container-answer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  color: white;
+}
+
+.container-answer h3 {
+  font-size: 25px;
+  font-weight: 500;
+  margin-bottom: 30px;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.answers {
+  display: flex;
+}
+
+.answer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  width: 300px;
+  color: #242424;
+  font-size: 18px;
+  font-weight: 500;
+  background-color: #f1f1f1;
+  border-radius: 50px;
+  margin: 20px;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  user-select: none;
+}
+
+.answer.clicked {
+  color: white;
+  background-color: #37aa59;
+}
+
+.answer:hover {
+  transform: scale(0.9);
+}
+
+input[type="radio"] {
+  margin-right: 10px;
+}
+
+button[type="submit"] {
+  height: 50px;
+  width: 200px;
+  font-size: 16px;
+  color: white;
+  background-color: #37aa59;
+  border-radius: 25px;
+  border: none;
+  margin-top: 30px;
+  animation: pulse 2s infinite;
+  cursor: pointer;
 }
 
 .icons {
@@ -114,7 +218,7 @@ header a span:last-child {
 .icons img:nth-child(1) {
   height: 140px;
   width: 140px;
-  top: 0;
+  top: 450px;
   left: 90px;
   rotate: 137deg;
   /* filter: blur(3px); */
@@ -124,7 +228,7 @@ header a span:last-child {
   height: 110px;
   width: 110px;
   top: -135px;
-  left: 260px;
+  left: 200px;
   rotate: -171deg;
   /* filter: blur(3px); */
   z-index: -1;
@@ -133,8 +237,8 @@ header a span:last-child {
 .icons img:nth-child(3) {
   height: 150px;
   width: 150px;
-  top: 90px;
-  left: 470px;
+  top: 280px;
+  left: 320px;
   rotate: -42deg;
   z-index: -1;
 }
@@ -142,8 +246,8 @@ header a span:last-child {
 .icons img:nth-child(4) {
   height: 180px;
   width: 180px;
-  top: 500px;
-  left: 460px;
+  top: 570px;
+  left: 580px;
   rotate: 147deg;
   /* filter: blur(3px); */
   z-index: -1;
@@ -152,8 +256,8 @@ header a span:last-child {
 .icons img:nth-child(5) {
   height: 200px;
   width: 200px;
-  top: 50px;
-  left: 440px;
+  top: -250px;
+  left: 740px;
   rotate: 147deg;
   /* filter: blur(3px); */
   z-index: -1;
@@ -162,7 +266,7 @@ header a span:last-child {
 .icons img:nth-child(6) {
   height: 230px;
   width: 230px;
-  top: 260px;
+  top: 250px;
   left: 570px;
   rotate: -70deg;
   /* filter: blur(3px); */
@@ -172,117 +276,11 @@ header a span:last-child {
 .icons img:nth-child(7) {
   height: 150px;
   width: 150px;
-  top: -200px;
-  left: 650px;
+  top: 100px;
+  left: 720px;
   rotate: -90deg;
   /* filter: blur(3px); */
   z-index: -1;
-}
-
-.search {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: column;
-  height: 250px;
-  width: 100%;
-}
-
-.search h2 {
-  color: white;
-  font-size: 38px;
-  font-weight: 800;
-}
-
-.search-container {
-  display: flex;
-  align-items: center;
-  height: 60px;
-  width: 1000px;
-  border-radius: 10px;
-  background-color: white;
-  user-select: none;
-  box-shadow: 0 20px 20px 5px rgba(0, 0, 0, 0.1);
-}
-
-.search-container input[type="search"] {
-  flex: 1;
-  border: none;
-  font-size: 20px;
-  background-color: white;
-}
-
-#search-icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  width: auto;
-  padding: 12px 0 12px 12px;
-  cursor: pointer;
-  border-radius: 10px;
-  user-select: none;
-}
-
-#search-icon img {
-  height: 100%;
-  width: 100%;
-  /* filter: invert(100%) brightness(200%); */
-}
-
-.searchBar {
-  width: 300px;
-  height: 100%;
-  font-size: 28px;
-  color: #333333;
-  padding: 30px;
-  border: none;
-  border-radius: 0 10px 10px 0;
-  outline: none;
-}
-
-.categories {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(4, 220px);
-  grid-gap: 20px;
-  height: 700px;
-  width: 100%;
-  /* transform: translateX(-20px); */
-  color: white;
-  padding: 25px;
-}
-
-.imgCategorie {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #1f1f1fbe;
-  border-radius: 15px;
-  cursor: pointer;
-  user-select: none;
-  padding: 40px 40px 60px 40px;
-}
-
-.imgCategorie img {
-  height: 100%;
-  width: auto;
-  object-fit: cover;
-  transition: all 0.5s ease;
-}
-
-.imgCategorie:hover img {
-  transform: scale(0.9);
-}
-
-.Name {
-  position: absolute;
-  bottom: 10px;
-  left: 20px;
-  font-size: 25px;
-  font-weight: 500;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 footer {
@@ -329,3 +327,17 @@ footer ul a {
     opacity: 1;
   }
 }
+
+@keyframes pulse {
+  0% {
+    box-shadow: #37aa59 0 0 0 0;
+  }
+
+  100% {
+    box-shadow: transparent 0 0 0 20px;
+  }
+}
+
+
+
+
