--- a/creation.css
+++ b/creation.css
@@ -79,17 +79,6 @@ header a span:last-child {
   object-fit: cover;
 }
 
-#deconnexion {
-  height: 100%;
-  width: auto;
-}
-
-#deconnexion img {
-  height: 100%;
-  width: 100%;
-  filter: invert(100%) brightness(200%);
-}
-
 .container {
   display: flex;
   justify-content: space-between;
@@ -124,6 +113,7 @@ header a span:last-child {
 .info-container img {
   height: 60px;
   width: 60px;
+  animation: rotate 0.8s ease forwards;
 }
 
 .input-quiz {
@@ -141,7 +131,7 @@ header a span:last-child {
 }
 
 .difficulty {
-  width:  auto;
+  width: auto;
 }
 
 #pageCreate {
@@ -191,16 +181,6 @@ header a span:last-child {
   border: none;
   border-radius: 30px;
   outline: none;
-}
-
-.trash {
-  display: none;
-  width: 30px;
-  height: 30px;
-  object-fit: cover;
-  transition: all 0.5s ease;
-  margin: 0 20px 0 auto;
-  cursor: pointer;
 }
 
 .question:hover .trash {
@@ -288,26 +268,6 @@ label {
   outline: none;
 }
 
-.question2 {
-  width: 500px;
-  padding: 10px;
-  cursor: pointer;
-  background-color: lightgray;
-}
-
-.add {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 35px;
-  font-weight: 300;
-  background-color: transparent;
-  margin-bottom: 18px;
-  border: 2px dashed white;
-  cursor: pointer;
-  user-select: none;
-}
-
 #button-submit {
   height: 45px;
   width: 120px;
@@ -318,244 +278,6 @@ label {
   border-radius: 35px;
   float: right;
   cursor: pointer;
-}
-
-#settings {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 30px;
-  background-color: rgba(141, 141, 141, 0.5);
-}
-
-.icons {
-  position: absolute;
-}
-
-.icons img {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transform-origin: center;
-  animation: move-icon 10s ease-in-out infinite alternate;
-}
-
-.icons img:nth-child(1) {
-  height: 140px;
-  width: 140px;
-  top: 0;
-  left: 90px;
-  rotate: 137deg;
-  /* filter: blur(3px); */
-}
-
-.icons img:nth-child(2) {
-  height: 110px;
-  width: 110px;
-  top: -135px;
-  left: 260px;
-  rotate: -171deg;
-  /* filter: blur(3px); */
-  z-index: -1;
-}
-
-.icons img:nth-child(3) {
-  height: 150px;
-  width: 150px;
-  top: 90px;
-  left: 470px;
-  rotate: -42deg;
-  z-index: -1;
-}
-
-.icons img:nth-child(4) {
-  height: 180px;
-  width: 180px;
-  top: 500px;
-  left: 460px;
-  rotate: 147deg;
-  /* filter: blur(3px); */
-  z-index: -1;
-}
-
-.icons img:nth-child(5) {
-  height: 200px;
-  width: 200px;
-  top: 50px;
-  left: 440px;
-  rotate: 147deg;
-  /* filter: blur(3px); */
-  z-index: -1;
-}
-
-.icons img:nth-child(6) {
-  height: 230px;
-  width: 230px;
-  top: 260px;
-  left: 570px;
-  rotate: -70deg;
-  /* filter: blur(3px); */
-  z-index: -1;
-}
-
-.icons img:nth-child(7) {
-  height: 150px;
-  width: 150px;
-  top: -200px;
-  left: 650px;
-  rotate: -90deg;
-  /* filter: blur(3px); */
-  z-index: -1;
-}
-
-.search {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: column;
-  height: 250px;
-  width: 100%;
-}
-
-.search h2 {
-  color: white;
-  font-size: 38px;
-  font-weight: 800;
-  animation: title 1s forwards;
-}
-
-.search-container2 {
-  display: flex;
-  align-items: center;
-  height: 60px;
-  width: 1000px;
-  border-radius: 10px;
-  background-color: white;
-  user-select: none;
-  box-shadow: 0 20px 20px 5px rgba(0, 0, 0, 0.1);
-}
-
-.search-container2 input[type="search"] {
-  flex: 1;
-  border: none;
-  font-size: 20px;
-  background-color: white;
-}
-
-#search-icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  width: auto;
-  padding: 12px 0 12px 12px;
-  cursor: pointer;
-  border-radius: 10px;
-  user-select: none;
-}
-
-#search-icon img {
-  height: 100%;
-  width: 100%;
-  /* filter: invert(100%) brightness(200%); */
-}
-
-.searchBar {
-  width: 300px;
-  height: 100%;
-  font-size: 28px;
-  color: #333333;
-  padding: 30px;
-  border: none;
-  border-radius: 0 10px 10px 0;
-  outline: none;
-}
-
-.categories {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(4, 220px);
-  grid-gap: 20px;
-  height: 570px;
-  width: 100%;
-  /* transform: translateX(-20px); */
-  overflow: hidden;
-  color: white;
-  padding: 25px;
-}
-
-.imgCategorie {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #1f1f1fbe;
-  border-radius: 15px;
-  cursor: pointer;
-  user-select: none;
-  padding: 40px 40px 60px 40px;
-}
-
-.imgCategorie img {
-  height: 100%;
-  width: auto;
-  object-fit: cover;
-  transition: all 0.5s ease;
-}
-
-.imgCategorie:hover img {
-  transform: scale(0.9);
-  rotate: 10deg;
-}
-
-.Name {
-  position: absolute;
-  color: white;
-  bottom: 10px;
-  left: 20px;
-  font-size: 25px;
-  font-weight: 500;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-footer {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: column;
-  height: 100px;
-  width: 100%;
-  color: white;
-}
-
-footer ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  list-style: none;
-}
-
-footer ul a {
-  color: white;
-  margin-right: 10px;
-}
-
-@keyframes move-icon {
-  0% {
-    transform: translateX(0);
-  }
-  50% {
-    transform: translateX(30px);
-    rotate: 1deg;
-  }
-  100% {
-    transform: translateX(0);
-  }
 }
 
 @keyframes fade {
@@ -575,5 +297,14 @@ footer ul a {
   to {
     transform: translateY(0);
     opacity: 1;
+  }
+}
+
+@keyframes rotate {
+  from {
+    rotate: 120deg;
+  }
+  to {
+    rotate: 0deg;
   }
 }
