--- a/accueil.css
+++ b/accueil.css
@@ -13,7 +13,7 @@ body {
   /* background: linear-gradient(0deg, rgba(15,15,15,1) 0%, rgba(24,24,24,1) 100%); */
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url("gradient.svg");
+  /* background-image: url("gradient.svg"); */
   overflow-x: hidden;
   transition: filter 0.4s ease;
   animation: fade 1s forwards;
