--- a/creation.css
+++ b/creation.css
@@ -12,7 +12,7 @@ body {
   background: rgb(20, 20, 20);
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url("gradient.svg");
+  /* background-image: url("gradient.svg"); */
   /* overflow-y: hidden; */
   transition: filter 0.4s ease;
   animation: fade 1s forwards;
