--- a/dashboard.css
+++ b/dashboard.css
@@ -190,11 +190,11 @@ header a span:last-child {
 
 .quiz2 .trash2 {
   display: none;
-  width: 30px;
-  height: 30px;
+  width: 2vw;
+  height: 2vw;
   object-fit: cover;
   position: absolute;
-  margin: 10px;
+  margin: 15px;
   transition: all 0.5s ease;
   /* border: 10px solid #333333; */
 }
