--- a/dashboard.css
+++ b/dashboard.css
@@ -440,13 +440,16 @@ button {
 .button {
   height: 60px;
   width: 60px;
-  /* background-color: #161616; */
   border-radius: 15px;
-  margin-bottom: 10px;
   padding: 13px;
   user-select: none;
   cursor: pointer;
   transition: all 0.5s ease;
+}
+
+.button a {
+  height: 100%;
+  width: 100%;
 }
 
 hr {
